added register logic

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Ievgen Dotsenko <ievgend2@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
