--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "server": " nodemon app.js"
+    "server": " nodemon app.js",
+    "client": "npm run start --prefix client",
+    "dev": " concurrently \"npm run server\" \"npm run client\" "
   },
   "keywords": [
     "MERN",
@@ -19,6 +21,8 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
