--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0-rc.2",
-    "mongoose": "^5.11.13"
+    "mongoose": "^5.11.13",
+    "react-bootstrap": "^1.4.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
