--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "MERN Stack",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "cross-end NODE_ENV=production node app.js",
     "server": " nodemon app.js",
     "client": "npm run start --prefix client",
-    "dev": " concurrently \"npm run server\" \"npm run client\" "
+    "client:install": "npm install --prefix client",
+    "client:build": "npm run build --prefix client",
+    "dev": "cross-end NODE_ENV=development concurrently \"npm run server\" \"npm run client\" "
   },
   "keywords": [
     "MERN",
@@ -19,6 +21,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
